5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4467/executions/1573_1560.log
== TEST (2019-03-27 15:49:42) 
-- CODE:
string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.""
print(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- ERROR:
File "XXXX", line 1
    string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.""
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:49:45) 
-- CODE:
string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.""
print(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- EXECUTION TIME:
0.158476
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 1
    string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.""
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:14:23) 
-- CODE:
string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.""
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- ERROR:
File "XXXX", line 1
    string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.""
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:15:14) 
-- CODE:
string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.""
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- ERROR:
File "XXXX", line 1
    string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.""
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:15:27) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:15:35) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:15:41) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- EXECUTION TIME:
0.153475
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
